--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "axios": "^0.25"
+        "axios": "^0.25",
+        "bootstrap-datepicker": "^1.9.0",
+        "select2": "^4.1.0-rc.0"
     }
 }
