--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     },
     "dependencies": {
         "axios": "^0.25",
-        "bootstrap-datepicker": "^1.9.0",
+        "bootstrap-datetime-picker": "^2.4.4",
         "select2": "^4.1.0-rc.0"
     }
 }
