--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "devDependencies": {
         "admin-lte": "3.1.0",
         "bootstrap": "^4.6.0",
+        "browser-sync": "^2.27.10",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "jquery": "^3.6",
         "laravel-mix": "6.0.49",
         "popper.js": "^1.16.1",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vue-loader": "^16.8.3"
     },
     "dependencies": {
         "axios": "^0.25",
         "bootstrap-datetime-picker": "^2.4.4",
-        "select2": "^4.1.0-rc.0"
+        "select2": "^4.1.0-rc.0",
+        "vue": "^3.2.36"
     }
 }
