--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,5 @@ _ide_helper.php
 /storage/*
 _ide_helper_models.php
 public/mix-manifest.json
-public/css/app.css
-public/css/bootstrap.min.css
-public/js/app.js
-public/js/bootstrap.bundle.min.js
+public/css/*.css
+public/js/*.js
