axios and lodash added

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "axios": "^0.25",
         "bootstrap-datetime-picker": "^2.4.4",
+        "lodash": "^4.17.21",
         "select2": "^4.1.0-rc.0",
         "vue": "^3.2.36",
         "vue3-select2-component": "^0.1.7"
