--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.12",
         "browser-sync": "^2.27.10",
         "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "6.0.49",
+        "postcss": "^8.4.16",
         "resolve-url-loader": "^5.0.0",
+        "tailwindcss": "^3.1.8",
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
