--- a/resources/model_schemas/Package.json
+++ b/resources/model_schemas/Package.json
@@ -12,18 +12,6 @@
         "inView": false
     },
     {
-        "name": "service_id",
-        "dbType": "bigInteger,false,true",
-        "htmlType": "number",
-        "validations": "required",
-        "searchable": true,
-        "fillable": true,
-        "primary": false,
-        "inForm": true,
-        "inIndex": true,
-        "inView": true
-    },
-    {
         "name": "name",
         "dbType": "string",
         "htmlType": "text",
@@ -36,19 +24,7 @@
         "inView": true
     },
     {
-        "name": "total_piece",
-        "dbType": "boolean",
-        "htmlType": "checkbox",
-        "validations": "required|boolean|boolean",
-        "searchable": true,
-        "fillable": true,
-        "primary": false,
-        "inForm": true,
-        "inIndex": true,
-        "inView": true
-    },
-    {
-        "name": "regular_price",
+        "name": "points",
         "dbType": "integer,false",
         "htmlType": "number",
         "validations": "required",
@@ -72,19 +48,7 @@
         "inView": true
     },
     {
-        "name": "save",
-        "dbType": "integer,false",
-        "htmlType": "number",
-        "validations": "required",
-        "searchable": true,
-        "fillable": true,
-        "primary": false,
-        "inForm": true,
-        "inIndex": true,
-        "inView": true
-    },
-    {
-        "name": "duration",
+        "name": "active",
         "dbType": "boolean",
         "htmlType": "checkbox",
         "validations": "required|boolean|boolean",
@@ -94,29 +58,5 @@
         "inForm": true,
         "inIndex": true,
         "inView": true
-    },
-    {
-        "name": "created_at",
-        "dbType": "datetime",
-        "htmlType": "date",
-        "validations": "nullable|nullable",
-        "searchable": false,
-        "fillable": false,
-        "primary": false,
-        "inForm": false,
-        "inIndex": false,
-        "inView": false
-    },
-    {
-        "name": "updated_at",
-        "dbType": "datetime",
-        "htmlType": "date",
-        "validations": "nullable|nullable",
-        "searchable": false,
-        "fillable": false,
-        "primary": false,
-        "inForm": false,
-        "inIndex": false,
-        "inView": false
     }
 ]
