--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "axios": "^0.25",
         "bootstrap": "^4.6.0",
         "bootstrap-datetime-picker": "^2.4.4",
+        "firebase": "^9.15.0",
         "font-awesome": "^4.7.0",
         "jquery": "^3.6",
         "lodash": "^4.17.21",
