--- a/package.json
+++ b/package.json
@@ -1,37 +1,27 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.12",
-        "browser-sync": "^2.27.10",
-        "browser-sync-webpack-plugin": "^2.3.0",
-        "laravel-mix": "6.0.49",
-        "postcss": "^8.4.16",
-        "resolve-url-loader": "^5.0.0",
-        "tailwindcss": "^3.1.8",
-        "vue-loader": "^16.8.3"
-    },
-    "dependencies": {
         "@ttskch/select2-bootstrap4-theme": "^1.5.2",
-        "admin-lte": "3.1.0",
-        "axios": "^0.25",
-        "bootstrap": "^4.6.0",
-        "bootstrap-datetime-picker": "^2.4.4",
+        "autoprefixer": "^10.4.12",
+        "axios": "^1.3.2",
         "firebase": "^9.15.0",
-        "font-awesome": "^4.7.0",
         "jquery": "^3.6",
         "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
+        "postcss": "^8.4.16",
         "select2": "^4.1.0-rc.0",
+        "tailwindcss": "^3.1.8",
         "vue": "^3.2.36",
-        "vue3-select2-component": "^0.1.7"
+        "vue3-select2-component": "^0.1.7",
+        "vite": "^4.0.0",
+        "@fortawesome/fontawesome-free": "^6.3.0",
+        "laravel-vite-plugin": "^0.7.2"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.0.0"
     }
 }
