--- a/package.json
+++ b/package.json
@@ -5,23 +5,21 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@ttskch/select2-bootstrap4-theme": "^1.5.2",
+        "@fortawesome/fontawesome-free": "^6.3.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.3.2",
         "firebase": "^9.15.0",
         "jquery": "^3.6",
+        "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
         "postcss": "^8.4.16",
-        "select2": "^4.1.0-rc.0",
         "tailwindcss": "^3.1.8",
-        "vue": "^3.2.36",
-        "vue3-select2-component": "^0.1.7",
         "vite": "^4.0.0",
-        "@fortawesome/fontawesome-free": "^6.3.0",
-        "laravel-vite-plugin": "^0.7.2"
+        "vue": "^3.2.36"
     },
     "dependencies": {
-        "@vitejs/plugin-vue": "^4.0.0"
+        "@vitejs/plugin-vue": "^4.0.0",
+        "vue-multiselect": "^3.0.0-beta.1"
     }
 }
